--- a/angularjs/src/app/app.component.html
+++ b/angularjs/src/app/app.component.html
@@ -1,1 +1,13 @@
-<easy-library></easy-library>
+<div class="masthead">
+    <h3 class="text-muted">EasyLibrary</h3>
+    <nav>
+        <ul class="nav nav-justified">
+            <li routerLinkActive="active"><a routerLink="home">Home</a></li>
+            <li routerLinkActive="active"><a routerLink="addBook">Add Book</a></li>
+            <li routerLinkActive="active"><a routerLink="books">My Library</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <router-outlet></router-outlet>
+</div>
